--- a/Clinica/index.html
+++ b/Clinica/index.html
@@ -3,16 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <!-- ===== CSS ===== -->
         <link rel="stylesheet" href="assets/css/styles.css"> 
         <link rel="stylesheet" href="assets/scss/styles.scss">
         <link rel="stylesheet" href="assets/css/styles-password.css">
-
-        <!-- ===== BOX ICONS ===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-
-        <title>Login form responsive</title>  
+        <title>Iniciar sesion</title>  
     </head>
     <body>
         <div class="l-form">
